--- a/Estilo.CSS
+++ b/Estilo.CSS
@@ -3,23 +3,27 @@
     --branco-principal:#FFFFFF
     --zinza:#D9D9D9
     --azul pincipal:#80a1C8
-    --azul mist:2174A3
-    --2400B6
-    --421C1C
-    --547EEB
-    --5F8AB3
-    --6C89D6
-    --
-    --
+    --azul mist:#2174A3
+    --azul escuro:#2400B6
+    --marrom:#421C1C
+    --azul duplo:#547EEB
+    --azul legal:#5F8AB3
+    --Aul roxo:#6C89D6
+    --rosa:#D4D0FF
+    --pele:#EADCDC
+    --branco mais:#FFF5F5
+    --azul brnco:#Linear
 }
 
 body{
 
+background-color: var(--azul legal);
+color: var(--azul escuro);
 
-
-
+}
 
 
 {
     margin:;
     margin
+    }
