--- a/Estilo.CSS
+++ b/Estilo.CSS
@@ -29,7 +29,7 @@ body{
 }
 
 .principal{
-    background-image: url(img/rest2 1.png);
+    background-image: url("img/81dafd468a5dbb0feaa8828b4509be351.png");
     background-repeat: no-repeat;
     background-size: contain;
 
