--- a/site-main/styles.css
+++ b/site-main/styles.css
@@ -4,21 +4,25 @@
     --zinza: #D9D9D9;
     --azul-pincipal: #80a1C8;
     --azul-mist: #2174A3;
-    --azul-escuro: #2400B6;
+    --azul-escuro: #040110;
     --marrom: #421C1C;
-    --cor-de-fundo: #547EEB;
+    --cor-de-fundo: #e8f4fb;
     --azul-legal: #5F8AB3;
     --Azul-roxo: #6C89D6;
     --rosa: #D4D0FF;
     --pele: #EADCDC;
     --branco-mais: #FFF5F5;
-    --azul-brnco: Linear;
+    --azul-brnco: #Linear;
+    --fonte-principal:'inter';
     }
  
 body{
    background-color: var(--cor-de-fundo);
    color: var(--azul-escuro);
- 
+   color: var(--azul-escuro);
+   font-family: var(--fonte-principal);
+   font-size: 32px;
+   font-weight: 260;
 
 }
 
@@ -33,6 +37,8 @@ body{
     background-image: url("img/81dafd468a5dbb0feaa8828b4509be351.png");
     background-repeat: no-repeat;
     background-size: contain;
+    align-items: center;
+    text-align: center;
 
 }
 
@@ -43,7 +49,7 @@ body{
 }
 
 .container__botao {
-    background-color: var(--preto);
+    background-color: var(--cor-de-fundo);
     border-radius: 5px;
     padding: 1em;
     color: var(--azul-pincipal);
@@ -52,6 +58,21 @@ body{
 
 .botao_secundario{
    background-color: #D9D9D9;
-   border: 2px solid var(--preto);
+   border: 2px solid var(--cor-de-fundo);
 
 }
+
+
+.header {
+    background-color: #000000;
+    color: rgb(255, 255, 255);
+    align-items: normal;
+    text-align:normal;
+    }
+
+.texti {
+        background-color: var(--cor-de-fundo);
+        color: var(--azul-escuro)(255, 255, 255);
+        align-items: center;
+        text-align:normal;
+        }
