--- a/site-main/styles.css
+++ b/site-main/styles.css
@@ -1,3 +1,4 @@
+
 :root{
     --preto: #000000;
     --branco-principal: #FFFFFF;
@@ -76,3 +77,7 @@ body{
         align-items: center;
         text-align:normal;
         }
+        
+.container__imagem{
+    margin: 1em 0 2em 0;
+}
